--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,9 @@ dependencies:
   intl: ^0.18.1
   firebase_core: ^2.16.0
   animated_notch_bottom_bar: ^1.0.0
-  fl_chart: ^0.62.0
-
+  syncfusion_flutter_gauges: ^23.1.39
+  syncfusion_flutter_charts: ^23.1.39
+  animated_text_kit: ^4.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
