--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   syncfusion_flutter_gauges: ^23.1.39
   syncfusion_flutter_charts: ^23.1.39
   animated_text_kit: ^4.2.2
+  google_sign_in: ^6.1.5
+  firebase_auth: ^4.10.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
