--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   syncfusion_flutter_gauges: ^23.1.39
   syncfusion_flutter_charts: ^23.1.39
   animated_text_kit: ^4.2.2
+  firebase_database: ^10.2.7
 
   #firebase_messaging
   flutter_local_notifications: ^16.1.0
