--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   flutter_svg: ^2.0.5
   table_calendar: ^3.0.9
+
+  #chat GPT
+  tflite: ^1.1.2
+  image_picker: ^1.0.4
+  chat_gpt_sdk: ^2.1.2
   
   #mqtt
   mqtt_client: ^9.8.1
@@ -92,6 +97,7 @@ flutter:
   assets:
     - assets/images/
     - assets/svg/
+    - assets/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
