--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   flutter_svg: ^2.0.5
   table_calendar: ^3.0.9
+  carousel_slider: ^4.2.1
 
   #chat GPT
   tflite: ^1.1.2
@@ -72,6 +73,7 @@ dependencies:
   camera: ^0.10.5+5
   image: ^3.0.1
   path_provider: ^2.0.5
+  flutter_staggered_grid_view: ^0.7.0
 
 
 dev_dependencies:
