--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,8 @@ dependencies:
   image: ^3.0.1
   path_provider: ^2.0.5
   flutter_staggered_grid_view: ^0.7.0
+  circular_reveal_animation: ^2.0.1
+  url_launcher: ^6.1.11
 
 
 dev_dependencies:
