--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   circular_reveal_animation: ^2.0.1
   url_launcher: ^6.1.11
+  flutter_vlc_player: ^7.2.0
 
 
 dev_dependencies:
